--- a/src/UI/Spinner/SpinnerBreak.module.css
+++ b/src/UI/Spinner/SpinnerBreak.module.css
@@ -1,5 +1,4 @@
 .loader {
-    break-after: always;
     color: #a97ffd;
     font-size: 90px;
     text-indent: -9999em;
@@ -9,6 +8,7 @@
     border-radius: 50%;
     margin: 72px auto;
     position: relative;
+    left: 50%;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
